--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "release": {
       "bin": [
         "Hello"
-      ]
+      ],
+      "rewritePrefix": true
     },
     "buildEnv": {
       "ODOC_SYNTAX": "re"
